# VRCLocalFlow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.md  README.zh.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-windows.yml  test.yml
crates/rtvt-engine/: Cargo.toml  build.rs
crates/rtvt-engine/src/: asr.rs  lang.rs  main.rs  protocol.rs  translate.rs
scripts/: download_opus_mt.sh
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs
src-tauri/src/asr/: mod.rs  whisper.rs
src-tauri/src/audio/: capture.rs  mod.rs  playback.rs
src-tauri/src/engine/: mod.rs
src-tauri/src/pipeline/: mod.rs  realtime.rs
src-tauri/src/translate/: download.rs  mod.rs  nllb.rs  registry.rs
src-tauri/src/tts/: macos.rs  mod.rs  windows.rs
src-tauri/src/vrchat/: format.rs  mod.rs  osc.rs  scroll.rs
src/components/: AudioSelector.tsx  SettingsPanel.tsx  StatusBar.tsx  SubtitleOverlay.tsx
src/hooks/: useAudioDevices.ts  useSettings.ts  useTranslation.ts
