[package]
name = "rtvt"
version = "0.1.0"
edition = "2021"

[lib]
name = "rtvt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = "0.13"
ct2rs = { version = "0.9", features = ["sentencepiece", "tokenizers"] }
sentencepiece = "0.12"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rubato = "0.14"
crossbeam-channel = "0.5"
webrtc-vad = "0.4"
num_cpus = "1"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
rosc = "0.10"
unicode-width = "0.2"

# Optimize dependencies in dev mode — critical for whisper.cpp / CTranslate2 performance.
# Without this, inference runs at opt-level=0 which is 5-10x slower.
[profile.dev.package."*"]
opt-level = 2

[features]
default = []
cuda = ["whisper-rs/cuda"]
openblas = ["whisper-rs/openblas"]
metal = ["whisper-rs/metal"]
hipblas = ["whisper-rs/hipblas"]

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
screencapturekit = "1.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Speech", "Win32_Media_Audio", "Win32_System_Com", "Win32_Devices_FunctionDiscovery"] }
