[package]
name = "rtvt-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rtvt-engine"
path = "src/main.rs"

[dependencies]
whisper-rs = "0.13"
ct2rs = { version = "0.9", features = ["sentencepiece"] }
sentencepiece = "0.12"
webrtc-vad = "0.4"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"

[features]
default = []
cuda = ["whisper-rs/cuda", "ct2rs/cuda"]
vulkan = ["whisper-rs/vulkan"]
